test/compile_errors/err_regex_capture_out_of_range.w
//! expect-check-fail: undefined variable

fn main:
    if "ab" =~ /(a)(b)/:
        print($3)
